fix align-items link for 320px and 380px

--- a/client/src/pages/CatalogPage/Top/index.module.scss
+++ b/client/src/pages/CatalogPage/Top/index.module.scss
@@ -4,9 +4,11 @@
   @include flex(column, null, center);
   width: 296px;
   margin: 0 auto 25px;
+  align-items: start;
 
   @include mobile {
     width: 356px;
+    align-items: start;
   }
 
   @include tablet {
